Criando Servicos de create, update e listagem

--- a/src/app/paginas/detalhes-cliente/detalhes-cliente.component.html
+++ b/src/app/paginas/detalhes-cliente/detalhes-cliente.component.html
@@ -37,6 +37,6 @@
   </div>
 
   <button type="submit" [disabled]="!formCliente.valid" class="btn btn-primary mt-4" >Salvar</button>
-  <a href="#" class="btn btn-secondary mt-4 ml-2">Cancelar</a>
+  <a href="/listagem-clientes" class="btn btn-secondary mt-4 ml-2">Cancelar</a>
 
 </form>
