--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -15,6 +15,9 @@
       <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" routerLink="/formulario-dinamico">Formulário Dinamico</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/listagem-clientes">Listagem Clientes</a>
+    </li>
     </ul>
   </div>
 </nav>
