Cadastro com subnivel

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -18,6 +18,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLinkActive="active" routerLink="/listagem-clientes">Listagem Clientes</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" routerLink="/tipocadastro-cadastro">Tipo Cadastro</a>
+    <li>
     </ul>
   </div>
 </nav>
